gcc/testsuite/gm2/iso/const/fail/testodd.mod
MODULE testodd ;

CONST
   foo = ODD (x) ;

VAR
   x: CARDINAL ;
BEGIN

END testodd.
